Closed Bug 16570 Opened 26 years ago Closed 26 years ago

[IME]Extraneous Return/Enter in JA input causes Editor assert

Categories

(Core :: DOM: Editor, defect, P1)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: blee, Assigned: ftang)

References

()

Details

(Keywords: inputmethod)

Steps to reproduce: - Linux 1) Open Editor in kterm, type a JA word. 2) Depress Enter type another word and depress Enter again. ==> Crash occurs at this point. - Windows 1) Open Editor and switch on JA IME. 2) Type a JA word and hit Enter. 3) Hit Enter again (at this point, the previous input disappears). 4) Type another word. ==> Crash. Stack Trace info in URL above. * Mac 10-15-08-M11 bld still suffers from bug 16432 bld: Linux 10-15-08-M11, Win 10-15-09-M11.
Severity: normal → major
OS: Windows NT → Linux
QA Contact: sujay → blee
OS: Linux → All
Hardware: PC → All
Assignee: buster → ftang
Priority: P3 → P1
Summary: Extraneous Return/Enter in JA input causes Editor crash → [IME][IME-CRASH]Extraneous Return/Enter in JA input causes Editor crash
Target Milestone: M11
IME txn crash problem. It should belong to me, not buster...
Status: NEW → ASSIGNED
Summary: [IME][IME-CRASH]Extraneous Return/Enter in JA input causes Editor crash → [IME]Extraneous Return/Enter in JA input causes Editor assert
I fix it so it now won't crash. It will assert and insert no text if I continue. I think this may related to rule system RETURN rule.
*** Bug 13786 has been marked as a duplicate of this bug. ***
*** Bug 15310 has been marked as a duplicate of this bug. ***
Summary: [IME]Extraneous Return/Enter in JA input causes Editor assert → [IME]Extraneous Return/Enter in JA input causes Editor crash
Summary: [IME]Extraneous Return/Enter in JA input causes Editor crash → [IME]Extraneous Return/Enter in JA input causes Editor assert
Blocks: 16127
On Win 10-19-09 bld, crash doesn't occur, but hitting return key twice after JA text input still wipes out the input. On Linux 10-19-08 bld, crash doesn't occur under the original scenario, but a single hit on return wipes out JA text input. Mac 10-19-08 bld still exhibits the problem of bug 16432.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
find the problem The problem is we insert 0 character in the nsHTMLEditor . Which later got treat as end of string in the html rule code. Kathy review my change. I check in the fix today.
Win 10-21-11-M11 and Mac 10-21-09-M11 still crash (bug 16432). Linux 10-21-08-M11 still clears JA text input on hitting return.
blee- are they crash by the SAME procedure ?
Yes. exactly the same procudures.
Status: RESOLVED → VERIFIED
Verified fixed in Win 10-28-09-M11, Linux 10-28-08-M11, Mac 10-28-10-M11 blds.
You need to log in before you can comment on or make changes to this bug.