do not do TypedText if the character code is 0. r=brade. Fix bug 16570 and 16811