editor/base/nsHTMLEditor.cpp
@@ -618,12 +618,14 @@ NS_IMETHODIMP nsHTMLEditor::EditorKeyPress(nsIDOMUIEvent* aKeyEvent)
     }
     else  // normal typing
     {
-      if ((PR_FALSE==altKey) && (PR_FALSE==ctrlKey) 
-      && (PR_FALSE==isShift) && (PR_FALSE==metaKey))
-      {
-        nsAutoString key(character);
-        return TypedText(key, eTypedText);
-      }
+	  if(0 != character) {
+		  if ((PR_FALSE==altKey) && (PR_FALSE==ctrlKey) 
+		  && (PR_FALSE==isShift) && (PR_FALSE==metaKey))
+		  {
+			nsAutoString key(character);
+			return TypedText(key, eTypedText);
+		  }
+	  }
     }
   }
   return NS_ERROR_FAILURE;
